fixing text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ html {
 
   body {
     background-color: #142126;
+    text-align: center;
     font-family: Poppins, sans-serif;
     font-size: 16px;
     font-weight: 300;
@@ -134,7 +135,7 @@ html {
 
   #contact {
     text-align:center;
-    padding: 0px;
+    padding: 10px;
   }
 
   #contact h2 {
@@ -150,6 +151,11 @@ html {
     text-align: center;
   }
 
+svg {
+  text-align: center;
+  padding: 1000px:
+
+}
   .email {
     font-size: 1.50em;
     text-transform: uppercase;
